--- a/src/styles/Notes.module.css
+++ b/src/styles/Notes.module.css
@@ -1,33 +1,34 @@
 .notesContainer {
-    max-width: none !important;
-  }
+  max-width: 100%;
+  max-height: 100%;
+}
   
   .homeScreenEmpty {
-    border-radius: 30px;
-    background-color: #252525;
+    background-color: red;
     display: flex;
-    max-width: 480px;
-    width: 100%;
+    height: 94vh;
+    width: 98vw;
     flex-direction: column;
     margin: 0 auto;
-    padding: 48px 24px;
+    padding: 32px 16px;
   }
   
   .header {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
-    gap: 40px 100px;
+    gap: 20px;
   }
   
   .title {
     color: #fff;
-    font: 600 43px Nunito, sans-serif;
+    font: 600 30px Nunito, sans-serif;
+    flex: 1;
   }
   
   .buttonContainer {
     display: flex;
-    gap: 21px;
-    flex: 1;
+    gap: 16px;
     margin: auto 0;
   }
   
@@ -35,24 +36,24 @@
     border-radius: 15px;
     background-color: #3b3b3b;
     display: flex;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
   
   .emptyStateImage {
     aspect-ratio: 1.22;
     object-fit: contain;
     object-position: center;
-    width: 100%;
+    width: 700px;
     align-self: center;
-    margin-top: 177px;
+    margin-top: 32px;
   }
   
   .emptyStateText {
     color: #fff;
     align-self: center;
     margin-top: 6px;
-    font: 300 20px Nunito, sans-serif;
+    font: 300 18px Nunito, sans-serif;
   }
   
   .floatingActionButton {
@@ -61,9 +62,9 @@
     border-radius: 50%;
     align-self: flex-end;
     display: flex;
-    margin-top: 174px;
-    width: 70px;
-    height: 70px;
+    margin-top: 32px;
+    width: 56px;
+    height: 56px;
   }
   
   .visually-hidden {
