style: :lipstick: Se hicieron ajustes de estilo al login

--- a/src/styles/LogIn.css
+++ b/src/styles/LogIn.css
@@ -113,5 +113,15 @@
     border: 1px solid #2d79f3;
     ;
   }
-  
-      
+.contenedor__logo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+#name{
+  font-size: 4vh;
+}
+#logo{
+  width: 15vh;
+}
