--- a/src/styles/Notes.module.css
+++ b/src/styles/Notes.module.css
@@ -35,6 +35,10 @@
     border-radius: 15px;
     background-color: #3b3b3b;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border: none;
     width: 40px;
     height: 40px;
   }
