feat: :sparkles: Se creo el endpoint para el login al igual que ya se aplico la logica en el componente

--- a/src/styles/ContentNote.module.css
+++ b/src/styles/ContentNote.module.css
@@ -1,5 +1,5 @@
 .content-editor {
-    background-color: rgba(37, 37, 37, 1);
+    background-color: rgb(37, 37, 37);
     padding: 3vh;
     display: flex;
     width: 100vw;
