--- a/src/styles/NotesCard.module.css
+++ b/src/styles/NotesCard.module.css
@@ -40,10 +40,13 @@
   }
   
   .noteCard {
+    display: flex;
+    align-items: center;
     border-radius: 10px;
     margin-top: 25px;
     color: #000;
     padding: 27px 45px;
+    height: 20vh;
     font: 400 25px Nunito, sans-serif;
   }
   
@@ -114,3 +117,29 @@
     white-space: nowrap;
     border: 0;
   }
+
+.pink {
+  background-color: #FFB3BA;
+}
+
+.red {
+  background-color: #ffbf77;
+}
+
+.Beige {
+  background-color: #8f8f60;
+
+}
+
+.Terracota {
+  background-color: rgba(255, 255, 154, 0.822)A;
+
+}
+
+.cyan {
+  background-color: rgb(231, 168, 218);
+}
+
+.Oliva {
+  background-color: #8B8B5B;
+}
