--- a/src/styles/ContentNote.module.css
+++ b/src/styles/ContentNote.module.css
@@ -19,6 +19,7 @@
     align-self: center;
     display: flex;
     width: 100%;
+    height: 100%;
     gap: 20px;
     justify-content: space-between;
   }
@@ -29,6 +30,7 @@
     align-items: start;
     font-family: Nunito, sans-serif;
     color: rgba(154, 154, 154, 1);
+    width: 100%;
     font-weight: 400;
   }
   
@@ -62,6 +64,8 @@
     color: rgba(154, 154, 154, 1);
     font-size: 25px;
     align-self: stretch;
+    width: 100%;
+
     margin-top: 58px;
   }
   
