--- a/src/styles/Notes.module.css
+++ b/src/styles/Notes.module.css
@@ -7,7 +7,7 @@
     background-color: #252525;
     display: flex;
     height: 100vh;
-    width: 100vw;
+    width:100%;
     flex-direction: column;
     padding: 32px 16px;
   }
