--- a/src/styles/ContentNote.module.css
+++ b/src/styles/ContentNote.module.css
@@ -2,7 +2,7 @@
     background-color: rgb(37, 37, 37);
     padding: 3vh;
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     flex-direction: column;
     overflow: hidden;
